--- a/templates/index.html
+++ b/templates/index.html
@@ -38,8 +38,8 @@
             <header class="header header-inline min-h-3 row desktop-12 container" role="banner">
 
                 <div class="site-logo">
-                    <h1><a href="/" rel="home">Eventif</a></h1>
-                    <p class="site-description screen-reader-only"> O maior encontro dos IFs do mundo!</p>
+                    <h1><a href="/" rel="home">EventIF</a></h1>
+                    <p class="site-description screen-reader-only">O maior encontro dos IFs do mundo!</p>
                 </div>
 
                 <nav class="nav-inline" role="navigation">
@@ -109,9 +109,8 @@
             <div class="register row">
                 <div class="text-align-center row desktop-12 padding-top-2 min-h-14 container">
                 	<h2>Inscrição</h2>
-                	<h3>Inscrições em breve!</h3>
-                    <p>Fique à vontade para entrar em contato com a gente.<br>Teremos prazer em responder quaisquer dúvidas.</p>
-                	<a class="btn-basic btn-green" href="mailto:contato@eventif.com.br">contato@eventif.com.br</a>
+                	<h3>Inscrições abertas!</h3>
+                	<a class="btn-basic btn-green" href="/inscricao/">Inscreva-se Já!</a>
                 </div>
             </div>
         </section>
