--- a/templates/index.html
+++ b/templates/index.html
@@ -45,6 +45,7 @@
                 <nav class="nav-inline" role="navigation">
                     <a href="javascript:void(0);" class="nav-mobile"><i class="fa fa-bars"></i></a>
                     <ul>
+                        <li><a data-scroll href="/contact/">Adicionar ao contact</a></li>
                         <li><a data-scroll href="#overview">Conferência</a></li>
                         <li><a data-scroll href="#sponsors">Patrocinadores</a></li>
                         <li><a data-scroll href="#register">Inscrição</a></li>
