--- a/templates/index.html
+++ b/templates/index.html
@@ -46,10 +46,10 @@
                     <a href="javascript:void(0);" class="nav-mobile"><i class="fa fa-bars"></i></a>
                     <ul>
                         <li><a data-scroll href="/contact/">Adicionar ao contact</a></li>
-                        <li><a data-scroll href="#overview">Conferência</a></li>
-                        <li><a data-scroll href="#sponsors">Patrocinadores</a></li>
-                        <li><a data-scroll href="#register">Inscrição</a></li>
-                        <li><a data-scroll href="#venue">Local</a></li>
+                        <li><a data-scroll href="{% url 'home' %}#overview">Conferência</a></li>
+                        <li><a data-scroll href="{% url 'home' %}#sponsors">Patrocinadores</a></li>
+                        <li><a data-scroll href="{% url 'home' %}#register">Inscrição</a></li>
+                        <li><a data-scroll href="{% url 'home' %}#venue">Local</a></li>
                     </ul>
                 </nav>
 
@@ -111,7 +111,7 @@
                 <div class="text-align-center row desktop-12 padding-top-2 min-h-14 container">
                 	<h2>Inscrição</h2>
                 	<h3>Inscrições abertas!</h3>
-                	<a class="btn-basic btn-green" href="/inscricao/">Inscreva-se Já!</a>
+                	<a class="btn-basic btn-green" href={% url 'subscriptions:new' %}>Inscreva-se Já!</a>
                 </div>
             </div>
         </section>
